<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:gravity="center"
    android:background="@drawable/bcg">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:textColor="#FEFEFE"/>

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:gravity="center"
        android:padding="25dp"
        android:textColor="#FEFEFE"
        android:textStyle="bold|italic"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/shape">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_mail_outline_black_24dp" />
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="15dp"
             android:hint="@string/mail"
             android:inputType="textEmailAddress"
             android:textColor="#FFEFEFE"
             android:textColorHint="#FEFEFE"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_lock_outline_black_24dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#FFEFEFE"
            android:textColorHint="#FEFEFE"/>

    </LinearLayout>


    <Button
        android:id="@+id/btn_log"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:background="@drawable/button_style"
        android:textStyle="bold"
        android:textColor="#FEFEFE"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#FFF"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="15dp"
            android:text="@string/or_you_can"
            android:textColor="#FEFEFE"
            android:textAlignment="center"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#FFF"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>


    </LinearLayout>


    <Button
        android:id="@+id/btn_new_account"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textStyle="bold"
        android:text="@string/newAcccount"
        android:textColor="#FEFEFE"
        android:background="@drawable/button_style"/>

</LinearLayout>