<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    android:background="@drawable/bcg">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:textColor="#FEFEFE"/>

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:layout_below="@+id/title"
        android:gravity="center"
        android:padding="30dp"
        android:textColor="#FEFEFE"
        android:textStyle="bold|italic"
        />
    <!-- Mail and Password EditText !-->


        <RelativeLayout
            android:layout_below="@+id/subTitle"
            android:id="@+id/relative_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape">

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:layout_toEndOf="@+id/image_mail"
                android:textColor="#FFEFEFE"
                android:textColorHint="#FEFEFE" />

            <ImageView
                android:id="@+id/image_mail"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:srcCompat="@drawable/ic_mail_outline_black_24dp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/relative_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relative_mail"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape">

            <ImageView
                android:id="@+id/image_password"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="4dp"
                app:srcCompat="@drawable/ic_lock_outline_black_24dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_toEndOf="@+id/image_password"
                android:textColor="#FFEFEFE"
                android:textColorHint="#FEFEFE"/>

        </RelativeLayout>


    <Button
        android:layout_marginTop="20dp"
        android:layout_below="@+id/relative_password"
        android:id="@+id/btn_log"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/login"
        android:background="@drawable/button_style"
        android:textStyle="bold"
        android:textColor="#FEFEFE"/>

    <RelativeLayout
        android:layout_below="@+id/btn_log"
        android:id="@+id/relative_or_you_can"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_toStartOf="@+id/text_orYouCan"
            android:layout_centerVertical="true"
            android:background="#FFF" />

        <TextView
            android:id="@+id/text_orYouCan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_you_can"
            android:textColor="#FEFEFE"
            android:padding="4dp"
            android:layout_centerHorizontal="true"
            />
        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="#FFF"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/text_orYouCan"/>


    </RelativeLayout>
    <Button
        android:id="@+id/btn_new_account"
        android:layout_below="@+id/relative_or_you_can"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textStyle="bold"
        android:text="@string/newAcccount"
        android:textColor="#FEFEFE"
        android:background="@drawable/button_style"/>

</RelativeLayout>